--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mahnı</title>
+  <title>Sevgi</title>
 </head>
-<body style="text-align:center;">
+<body style="margin:0; text-align:center;">
 
-  <img src="sekil.jpg" style="width:100%;max-width:400px;">
+  <img src="sekil.jpg" style="width:100%;height:auto;">
 
-  <audio controls autoplay style="margin-top:20px;">
+  <audio controls autoplay>
     <source src="mahni.mp3" type="audio/mpeg">
   </audio>
 
