--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="margin:0; text-align:center;">
 
-  <img src="sekil.jpg" style="width:100%;height:auto;">
+  <img src="fidan.jpg" style="width:100%;height:auto;">
 
   <audio controls autoplay>
     <source src="mahni.mp3" type="audio/mpeg">
@@ -15,3 +15,4 @@
 
 </body>
 </html>
+
